feat: Add Ollama response and query understanding services, refactor Rust API imports, and update UI components.

--- a/local-gemma-macos/.gitignore
+++ b/local-gemma-macos/.gitignore
@@ -47,3 +47,5 @@ app.*.map.json
 # Large embedding models (download via download_models.sh)
 assets/bge-m3-int8.onnx
 assets/bge-m3-tokenizer.json
+
+*.backup
