feat: Introduce user intent recognition and slash command UI for chat input.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,14 @@ dependencies:
     path: rust_builder
   path_provider: ^2.1.5
   onnxruntime: ^1.4.1
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  freezed: ^3.2.4
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
