--- a/local-gemma-macos/pubspec.yaml
+++ b/local-gemma-macos/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   force_directed_graphview: ^0.6.2
   flutter_markdown: ^0.7.3
   scrollable_positioned_list: ^0.3.8
+  flutter_streaming_text_markdown: ^1.3.2
 
 dev_dependencies:
   flutter_test:
