--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_rust_bridge: 2.11.1
-  rag_engine_flutter:
-    path: rust_builder
+  flutter_rust_bridge: ^2.11.1
+  rag_engine_flutter: ^0.1.0
   path_provider: ^2.1.5
   onnxruntime: ^1.4.1
   freezed_annotation: ^3.1.0
