--- a/rust_builder/android/build.gradle
+++ b/rust_builder/android/build.gradle
@@ -51,6 +51,6 @@ android {
 
 apply from: "../cargokit/gradle/plugin.gradle"
 cargokit {
-    manifestDir = "../../rust"
+    manifestDir = "../rust"
     libname = "rag_engine_flutter"
 }
