--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -31,8 +31,8 @@ sha2 = "0.10"
 # Semantic text splitting with Unicode sentence/word boundaries
 text-splitter = { version = "0.29.3", default-features = false }
 
-# ort 크레이트 제거: iOS에서 libonnxruntime.dylib 로딩 실패
-# ONNX 추론은 Flutter onnxruntime 패키지로 이동
+# Removed 'ort' crate: failed to load libonnxruntime.dylib on iOS
+# ONNX inference moved to Flutter onnxruntime package
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
