--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   mobile_rag_engine:
     path: ../
   path_provider: ^2.1.5
+  file_picker: ^9.2.1
 
 dev_dependencies:
   flutter_test:
