--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
         run: flutter pub get
       
       - name: Analyze code
-        run: flutter analyze --no-fatal-infos
+        run: |
+          # Analyze main package only, exclude cargokit build_tool (separate Dart package)
+          flutter analyze lib/ test/ --no-fatal-infos
       
       - name: Run tests
         run: flutter test
