--- a/rust_builder/rust/Cargo.toml
+++ b/rust_builder/rust/Cargo.toml
@@ -9,7 +9,9 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 flutter_rust_bridge = "=2.11.1"
 anyhow = "1.0.100"
-rusqlite = { version = "0.38.0", features = ["bundled"] }
+rusqlite = { version = "0.32", features = ["bundled"] }
+r2d2 = "0.8"
+r2d2_sqlite = "0.25"
 ndarray = "0.17.1"
 log = "0.4.29"
 once_cell = "1.21"
