--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mobile_rag_engine
 description: A high-performance, on-device RAG (Retrieval-Augmented Generation) engine for Flutter. Run semantic search completely offline on iOS and Android with HNSW vector indexing.
-version: 0.5.3
+version: 0.6.0
 homepage: https://github.com/dev07060/mobile_rag_engine
 repository: https://github.com/dev07060/mobile_rag_engine
 issue_tracker: https://github.com/dev07060/mobile_rag_engine/issues
@@ -21,9 +21,9 @@ dependencies:
     sdk: flutter
   flutter_rust_bridge: ^2.11.1
   # For development, use path dependency:
-  # rag_engine_flutter:
-  #   path: rust_builder/
-  rag_engine_flutter: ^0.5.1
+  rag_engine_flutter:
+    path: rust_builder/
+  # rag_engine_flutter: ^0.6.0
   path_provider: ^2.1.5
   onnxruntime: ^1.4.1
   freezed_annotation: ^3.1.0
