--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_rust_bridge: ^2.11.1
-  # For development, use path dependency:
-  rag_engine_flutter:
-    path: rust_builder/
-  # rag_engine_flutter: ^0.6.0
+  rag_engine_flutter: ^0.6.0
   path_provider: ^2.1.5
   onnxruntime: ^1.4.1
   freezed_annotation: ^3.1.0
