--- a/rust_builder/rust/Cargo.toml
+++ b/rust_builder/rust/Cargo.toml
@@ -16,6 +16,7 @@ r2d2_sqlite = "0.25"
 ndarray = "0.17.1"
 log = "0.4.29"
 once_cell = "1.21"
+lazy_static = "1.4"
 
 # Tokenizer for text preprocessing
 # Using fancy-regex instead of onig for iOS cross-compilation compatibility
