feat: enhanced hybrid search algorithm

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: mobile_rag_engine
 description: A high-performance, on-device RAG (Retrieval-Augmented Generation) engine for Flutter. Run semantic search completely offline on iOS and Android with HNSW vector indexing.
-version: 0.7.1
+version: 0.7.5
 homepage: https://github.com/dev07060/mobile_rag_engine
 repository: https://github.com/dev07060/mobile_rag_engine
 issue_tracker: https://github.com/dev07060/mobile_rag_engine/issues
 
 topics:
-  - ai
+  - LLM
   - machine-learning
   - semantic-search
   - vector-database
-  - rag
+  - RAG
 
 environment:
   sdk: ^3.9.2
@@ -20,9 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_rust_bridge: ^2.11.1
-  # rag_engine_flutter: ^0.7.0
-  rag_engine_flutter: 
-    path: rust_builder
+  rag_engine_flutter: ^0.7.5
+  # rag_engine_flutter: 
+  #   path: rust_builder
   path_provider: ^2.1.5
   onnxruntime: ^1.4.1
   freezed_annotation: ^3.1.0
