--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   freezed: ^3.2.4
   build_runner: ^2.4.8
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
