--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+dependency_overrides:
+  rag_engine_flutter:
+    path: ../rust_builder
+
 flutter:
   uses-material-design: true
   assets:
